tests/paczka2/big_fuzzy/62984963.err
Error in line 2: EG3jq1Nw S339 93,9
Error in line 10: DFVu A871 8,7
Error in line 19: EG3jq1Nw S493 90,8
Error in line 25: kV1dFsOB S493 -1,1
Error in line 27: DFVu A871 36,2
Error in line 31: EG3jq1Nw A178 12,6
Error in line 34: 0Ns7 A178 82,2
Error in line 17: kV1dFsOB S493 30,1
Error in line 42: kV1dFsOB A871 56,1
Error in line 49: kV1dFsOB S339 73,6
Error in line 54: A178 A178 64,1
Error in line 57: 0Ns7 A178 92,0
Error in line 50: kV1dFsOB S493 94,9
Error in line 62: kV1dFsOB A178 22,2
Error in line 69: A178 S493 93,6
Error in line 89: 0Ns7 S493 52,61
Error in line 92: 0Ns7 S493 249,0
Error in line 97: A178 S339 99,1
Error in line 109: yNwn6iZpA4r S339 O,0
Error in line 106: gy9sPUwVf A871 67,9
Error in line 108: yNwn6iZpA4r S339 28,7
Error in line 112: yNwn6iZpA4r S493 3,7
Error in line 115: kV1dFsOB A871 96,6
Error in line 118: kV1dFsOB S493 77,6
Error in line 116: A178 S339 9,0
Error in line 131: DFVu S339 42,9
Error in line 145: 0Ns7 S339 3,6
Error in line 147: gy9sPUwVf S339 31,7
Error in line 161: A178 S339 104,3
Error in line 173: kV1dFsOB A871  ,0
Error in line 171: gy9sPUwVf S493 54,0
Error in line 177: EG3jq1Nw S493 20,5
Error in line 176: kV1dFsOB S339 35,6
Error in line 179: EG3jq1Nw A871 5,0
Error in line 194: kV1dFsOB A871 26,1
Error in line 196: kV1dFsOB S493 2,4
Error in line 175: gy9sPUwVf S339 60,2
Error in line 203: yNwn6iZpA4r A871 19,6
Error in line 210: kV1dFsOB A178 86,6
Error in line 212: gy9sPUwVf S493 37,0
Error in line 221: 0Ns7 A871 19,3
Error in line 216: kV1dFsOB S339 86,3
Error in line 226: 0Ns7 S493 59,10
Error in line 217: EG3jq1Nw A871 57,4
Error in line 223: DFVu A871 159,5
Error in line 229: DFVu S339 87,5
Error in line 230: DFVu A178 49,9
Error in line 233: DFVu S339 85,5
Error in line 241: gy9sPUwVf A178 37,6
Error in line 249: kV1dFsOB S493 -1,9
Error in line 245: 0Ns7 S493 45,6
